// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inferrer characterization — sequential/THEN baseline > C1: monthly grant whose rate doubles mid-stream, then returns 1`] = `
{
  "decomposition": [
    "then-segment",
    "then-segment",
    "then-segment",
  ],
  "dsl": "200 VEST FROM DATE 2023-11-01 OVER 2 months EVERY 1 month THEN 400 VEST OVER 2 months EVERY 1 month THEN 200 VEST OVER 2 months EVERY 1 month",
  "residual": 0,
  "status": "template",
}
`;

exports[`inferrer characterization — sequential/THEN baseline > C2: three-month cliff, then a monthly tail 1`] = `
{
  "decomposition": [
    "cliff",
  ],
  "dsl": "600 VEST FROM DATE 2023-11-01 OVER 6 months EVERY 1 month CLIFF 3 months",
  "residual": 0,
  "status": "template",
}
`;

exports[`inferrer characterization — sequential/THEN baseline > C3: cliff, then monthly, then a slower monthly tail 1`] = `
{
  "decomposition": [
    "then-segment",
    "then-segment",
    "then-segment",
  ],
  "dsl": "300 VEST FROM DATE 2024-01-01 OVER 1 month EVERY 1 month THEN 300 VEST OVER 3 months EVERY 1 month THEN 150 VEST OVER 3 months EVERY 1 month",
  "residual": 0,
  "status": "template",
}
`;

exports[`inferrer characterization — sequential/THEN baseline > C4: cliff + monthly head, then a quarterly tail 1`] = `
{
  "decomposition": [
    "then-segment",
    "then-segment",
    "then-segment",
  ],
  "dsl": "300 VEST FROM DATE 2024-01-01 OVER 1 month EVERY 1 month THEN 300 VEST OVER 3 months EVERY 1 month THEN 200 VEST OVER 6 months EVERY 3 months",
  "residual": 0,
  "status": "template",
}
`;

exports[`inferrer characterization — sequential/THEN baseline > C5: two monthly grants on different days (1st and 15th) — two schedules 1`] = `
{
  "decomposition": [
    "plain",
    "plain",
  ],
  "dsl": "400 VEST FROM DATE 2024-01-01 OVER 4 months EVERY 1 month PLUS 200 VEST FROM DATE 2024-01-15 OVER 4 months EVERY 1 month",
  "reason": "Two independent absolute-date vesting grids on one grant.",
  "residual": 0,
  "status": "events-only",
}
`;

exports[`inferrer characterization — sequential/THEN baseline > C6: three monthly grants on different days (1st, 10th, 20th) 1`] = `
{
  "decomposition": [
    "plain",
    "plain",
    "plain",
  ],
  "dsl": "300 VEST FROM DATE 2024-01-01 OVER 3 months EVERY 1 month PLUS 180 VEST FROM DATE 2024-01-10 OVER 3 months EVERY 1 month PLUS 90 VEST FROM DATE 2024-01-20 OVER 3 months EVERY 1 month",
  "reason": "Two independent absolute-date vesting grids on one grant.",
  "residual": 0,
  "status": "events-only",
}
`;

exports[`inferrer characterization — sequential/THEN baseline > C7: almost a clean chain, but the last tranche is off by 5 — no single-schedule fit 1`] = `
{
  "decomposition": [
    "plain",
    "then-segment",
    "then-segment",
  ],
  "dsl": "600 VEST FROM DATE 2023-11-01 OVER 6 months EVERY 1 month PLUS 200 VEST FROM DATE 2024-01-01 OVER 2 months EVERY 1 month THEN 5 VEST OVER 2 months EVERY 2 months",
  "reason": "Two independent absolute-date vesting grids on one grant.",
  "residual": 0,
  "status": "events-only",
}
`;

exports[`inferrer characterization — sequential/THEN baseline > C8: a plain six-month monthly grant (one template, not a longer chain) 1`] = `
{
  "decomposition": [
    "plain",
  ],
  "dsl": "600 VEST FROM DATE 2024-01-01 OVER 6 months EVERY 1 month",
  "residual": 0,
  "status": "template",
}
`;
